Fixed add button placing on picktime. Also began development on cropper

--- a/src/Picktime/Picktime.css
+++ b/src/Picktime/Picktime.css
@@ -229,6 +229,18 @@
         align-items: center;
     }
 
+    .Picktime-Select-Area{
+        width: 50%;
+        height: 700px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: 100px;
+        margin-bottom: 100px;
+    }
+
     .Picktime-Dropdown-Wrapper{
         width: 50%;
         display: flex;
@@ -237,8 +249,8 @@
         align-items: center;
         position: inline;
         top: 50px;
-        margin-bottom: 100px;
     }
+    
 
     .Picktime-Selected-Wrapper{
         width: 50%;
@@ -249,7 +261,9 @@
         align-items: center;
         position: inline;
         top: 0px;
+        margin-bottom: 20px;
     }
+
 }
 
 @media(max-width: 450px){
